tdf#130054: consider all row/col bars in ScTabView::EnableRefInput

Left col bar and bottom row bar were ignored - apparently overlooked
at least since commit 9ae5a91f7955e44d3b24a3f7741f9bca02ac7f24.

Change-Id: I5c2386b0aa1fdbb42f352c0b654e268dc62c7e66
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87007
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>